purano bata halka change gareko.

--- a/hategit.html
+++ b/hategit.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>New on git</title>
+	<title>old on git</title>
 </head>
 <body>
 	<h1>New on git just practice more.</h1>
+	<h2>don't hate programmer.</h2>
+	
 
 </body>
 </html>
